# CSU-Hardware-Reverse-Engineering

./: .gitignore  README.md
hal_nordic-master/drivers/nrf_802154/driver/src/: nrf_802154_types_internal.h
hal_nordic-master/drivers/nrf_802154/serialization/: CMakeLists.txt
nrf9160-ADC-Terminal/: CMakeLists.txt  Kconfig  nrf9160dk_nrf9160_ns.overlay  prj.conf
nrf9160-ADC-Terminal/src/: main.c
nrf9160-Recreation/: CMakeLists.txt  Kconfig  nrf9160dk_nrf9160_ns.overlay  prj.conf
nrf9160-Recreation/src/: main.c  saadc.c
